<resources>
    <string name="app_name">Pokédex</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_pokemon_detail">Charizard</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="poison">Poison</string>
    <string name="water">Water</string>
    <string name="steel">Steel</string>
    <string name="rock">Rock</string>
    <string name="psychic">Psychic</string>
    <string name="normal">Normal</string>
    <string name="ice">Ice</string>
    <string name="ground">Ground</string>
    <string name="grass">Grass</string>
    <string name="ghost">Ghost</string>
    <string name="flying">Flying</string>
    <string name="fire">Fire</string>
    <string name="fighting">Fighting</string>
    <string name="electric">Electric</string>
    <string name="dragon">Dragon</string>
    <string name="dark">Dark</string>
    <string name="bug">Bug</string>
</resources>
